--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <!-- <script type="module" src="./js/lesson-5.js"></script> -->
     <!-- <script type="module" src="./js/lesson-6.js"></script> -->
     <script type="module" src="./js/module-lms-5.js"></script>
+    <!-- <script type="module" src="./js/gena.js"></script> -->
   </body>
 </html>
