--- a/index.html
+++ b/index.html
@@ -45,12 +45,39 @@
       <input id="pass" type="text" placeholder="Пароль..." />
       <p id="preview"></p>
     </div> -->
-
+    <!-- 
     <div class="task">
       <h2>7. Фільтр заборонених слів</h2>
       <input id="filter" type="text" placeholder="Введи текст..." />
       <p>Результат: <span id="filter-result"></span></p>
-    </div>
+    </div> -->
+    <!-- 
+    <button type="button" class="change-color">Змінити колір</button>
+    <p>Поточний колір фону: <span class="color">#FFFFFF</span></p> -->
+    <!-- <div class="container">
+      <p>Це перший абзац.</p>
+      <p>Це другий абзац.</p>
+      <p>Це третій абзац.</p>
+    </div> -->
+
+    <!-- <ul class="fruits">
+      <li>Яблуко</li>
+      <li>Банан</li>
+      <li>Апельсин</li>
+      <li>Груша</li>
+    </ul> -->
+
+    <!-- <div class="box"></div> -->
+
+    <!-- <h1 class="title">Заголовок</h1> -->
+
+    <!-- <div class="card"></div> -->
+    <!-- 
+    <button class="switch">Увімкнути/Вимкнути</button>
+    <div class="light"></div> -->
+
+    <input type="text" class="todo-input" placeholder="Введіть завдання" />
+    <ul class="todo-list"></ul>
     <!--! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
     <!-- <script type="module" src="./js/lesson-2.js"></script> -->
@@ -64,7 +91,7 @@
     <!-- <script type="module" src="./js/module-lms-5.js"></script> -->
     <!-- <script type="module" src="./js/module-lms-6.js"></script> -->
 
-    <!--! практика команда  -->
+    <!--! практика  -->
     <!-- <script type="module" src="./js/practice.js"></script> -->
     <script type="module" src="./js/practice2.js"></script>
   </body>
