--- a/index.html
+++ b/index.html
@@ -119,15 +119,147 @@
       }
     </style> -->
 
-    <h2>Додавання елементів у список</h2>
+    <!-- <div class="task">
+      <h2>Завдання 1: Зміна тексту</h2>
+      <p id="text-demo">Це початковий текст</p>
+      <button id="change-text-btn">Змінити текст</button>
+      <button id="toggle-highlight-btn">Виділити/Зняти виділення</button>
+    </div> -->
 
-    <input type="text" id="addInput" placeholder="Введи новий елемент" />
-    <button id="addItemBtn">Додати елемент</button>
+    <!-- <div class="task">
+      <h2>Завдання 2: Список покупок</h2>
+      <input type="text" id="item-input" placeholder="Введи продукт" />
+      <button id="add-item-btn">Додати</button>
+      <ul id="item-list"></ul>
+    </div> -->
 
-    <ul id="addList">
-      <li>Стартовий елемент 1</li>
-      <li>Стартовий елемент 2</li>
-    </ul>
+    <!-- <div class="task">
+      <h2>Завдання 4: Фільтр товарів</h2>
+      <input type="text" id="search-input" placeholder="Шукай товар..." />
+      <ul id="product-list">
+        <li>Яблуко - 30 грн</li>
+        <li>Банан - 40 грн</li>
+        <li>Апельсин - 50 грн</li>
+        <li>Груша - 35 грн</li>
+        <li>Ананас - 80 грн</li>
+      </ul>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 1: Показати/Сховати</h2>
+      <p id="secret-text" class="hidden">Це секретний текст! 🎉</p>
+      <button id="toggle-btn">Показати</button>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 2: Зміна кольору</h2>
+      <div
+        id="color-box"
+        style="width: 200px; height: 200px; background: blue"
+      ></div>
+      <button id="red-btn">Червоний</button>
+      <button id="green-btn">Зелений</button>
+      <button id="yellow-btn">Жовтий</button>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 3: Лічильник</h2>
+      <p id="counter">0</p>
+      <button id="plus-btn">+1</button>
+      <button id="minus-btn">-1</button>
+      <button id="reset-btn">Скинути</button>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 4: Привітання</h2>
+      <input type="text" id="name-input" placeholder="Введи своє ім'я" />
+      <button id="greet-btn">Привітати</button>
+      <p id="greeting"></p>
+    </div> -->
+    <!-- 
+    <div class="task">
+      <h2>Завдання 5: Список справ</h2>
+      <input type="text" id="todo-input" placeholder="Що треба зробити?" />
+      <button id="todo-btn">Додати</button>
+      <ul id="todo-list"></ul>
+    </div> -->
+    <!-- 
+    <div class="task">
+      <h2>Завдання 6: Список фруктів</h2>
+      <button id="show-fruits-btn">Показати фрукти</button>
+      <ul id="fruits-list"></ul>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 7: Простий калькулятор</h2>
+      <input type="number" id="num1" placeholder="Число 1" />
+      <input type="number" id="num2" placeholder="Число 2" />
+      <button id="add-btn">+</button>
+      <button id="subtract-btn">-</button>
+      <button id="multiply-btn">×</button>
+      <button id="divide-btn">÷</button>
+      <p id="result">Результат:</p>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 8: Зміна розміру</h2>
+      <p id="text-size">Цей текст можна збільшувати!</p>
+      <button id="increase-btn">Збільшити</button>
+      <button id="decrease-btn">Зменшити</button>
+    </div> -->
+    <!-- 
+    <div class="task">
+      <h2>Завдання 10: Темна/Світла тема</h2>
+      <button id="theme-btn">Змінити тему</button>
+
+      <style>
+        body.dark-theme {
+          background: #222;
+          color: white;
+        }
+      </style>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 13: Картки товарів</h2>
+      <button id="show-products-btn">Показати товари</button>
+      <div id="products-container"></div>
+    </div> -->
+
+    <div class="task">
+      <h2>Завдання 16: Модальне вікно</h2>
+      <button id="open-modal-btn">Відкрити модалку</button>
+    </div>
+
+    <div
+      id="modal"
+      class="hidden"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      <div
+        style="
+          background: white;
+          padding: 30px;
+          border-radius: 10px;
+          color: black;
+        "
+      >
+        <h3>Це модальне вікно!</h3>
+        <p>Натисни поза вікном або на кнопку, щоб закрити</p>
+        <button id="close-modal-btn">Закрити</button>
+      </div>
+    </div>
+
     <!--! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
     <!-- <script type="module" src="./js/lesson-2.js"></script> -->
