--- a/index.html
+++ b/index.html
@@ -440,11 +440,94 @@
       <ul id="items-list"></ul>
     </div> -->
 
-    <div class="task">
+    <!-- <div class="task">
       <h2>Завдання 6: Видалення елементів</h2>
       <button id="card-btn">Додати картку</button>
       <div id="cards-container"></div>
-    </div>
+    </div> -->
+    <!-- 
+    <div class="task">
+      <h2>Завдання 7: insertAdjacentHTML</h2>
+      <div
+        id="central-box"
+        style="border: 2px solid black; padding: 20px; margin: 20px 0"
+      >
+        <p>Центральний контент</p>
+      </div>
+      <button id="before-btn">beforebegin (перед)</button>
+      <button id="start-btn">afterbegin (початок всередині)</button>
+      <button id="end-btn">beforeend (кінець всередині)</button>
+      <button id="after-btn">afterend (після)</button>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 8: Події форми</h2>
+      <input type="text" id="live-input" placeholder="Почни вводити..." />
+      <p id="live-counter">Символів: 0</p>
+
+      <select id="theme-select">
+        <option value="">Вибери тему</option>
+        <option value="light">Світла</option>
+        <option value="dark">Темна</option>
+        <option value="blue">Синя</option>
+      </select>
+      <p id="theme-info"></p>
+
+      <style>
+        .input-focused {
+          border: 3px solid #3498db;
+          background: #ecf0f1;
+        }
+      </style>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 9: Клавіатурні скорочення</h2>
+      <textarea
+        id="editor"
+        rows="5"
+        placeholder="Спробуй: Enter - новий рядок, Escape - очистити, Ctrl+S - зберегти"
+      ></textarea>
+      <p id="key-info"></p>
+      <div
+        id="saved-text"
+        style="border: 1px solid green; padding: 10px; display: none"
+      ></div>
+    </div> -->
+
+    <!-- <div class="task">
+      <h2>Завдання 10: Форма з валідацією</h2>
+      <form id="register-form">
+        <input
+          type="text"
+          id="reg-username"
+          placeholder="Username (мін 3 символи)"
+          required
+        />
+        <input type="email" id="reg-email" placeholder="Email" required />
+        <input
+          type="password"
+          id="reg-password"
+          placeholder="Пароль (мін 6 символів)"
+          required
+        />
+        <button type="submit">Зареєструватися</button>
+      </form>
+      <div id="errors" style="color: red"></div>
+      <div id="success" style="color: green"></div>
+    </div> -->
+
+    <!-- <input id="taskInput" placeholder="Нова задача..." />
+    <button id="addBtn">Додати</button>
+    <ul id="taskList"></ul> -->
+
+    <input id="search" placeholder="Пошук..." />
+    <select id="category">
+      <option value="all">Всі</option>
+      <option value="fruit">Фрукти</option>
+      <option value="veg">Овочі</option>
+    </select>
+    <div id="products"></div>
 
     <!-- ! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
