--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
     </table>
     <button id="add-user">Add User</button> -->
 
-    <ul class="gallery"></ul>
+    <!-- <ul class="gallery"></ul>
 
     <div class="modal hidden">
       <span class="close">&times;</span>
@@ -678,7 +678,198 @@
           cursor: pointer;
         }
       </style>
+    </div> -->
+
+    <!-- <p id="text">Початковий текст</p>
+    <button id="changeBtn">Змінити текст</button>
+
+    <script>
+      // Твій код тут
+    </script> -->
+
+    <!-- <style>
+      .box {
+        width: 200px;
+        height: 100px;
+        background-color: lightgray;
+        margin: 20px 0;
+        transition: all 0.3s;
+      }
+      .active {
+        background-color: green;
+        transform: scale(1.1);
+      }
+    </style>
+
+    <div class="box" id="toggleBox"></div>
+    <button id="toggleBtn">Перемкнути клас</button>
+    <p id="sp">text</p> -->
+
+    <!-- <style>
+      .counter {
+        font-size: 48px;
+        margin: 20px 0;
+      }
+      button {
+        font-size: 24px;
+        padding: 10px 20px;
+        margin: 5px;
+      }
+    </style>
+
+    <div class="counter" id="counter">0</div>
+    <button id="decreaseBtn">-</button>
+    <button id="increaseBtn">+</button>
+    <button id="reset">reset</button> -->
+
+    <!-- <style>
+      .error {
+        color: red;
+        display: none;
+      }
+      input {
+        padding: 5px;
+        margin: 10px 0;
+      }
+    </style>
+
+    <form id="nameForm">
+      <input type="text" id="nameInput" placeholder="Введіть ім'я" />
+      <p class="error" id="errorMsg">Будь ласка, введіть ім'я!</p>
+      <button type="submit">Відправити</button>
+    </form> -->
+
+    <!-- <style>
+      .todo-item {
+        padding: 10px;
+        margin: 5px 0;
+        background-color: #f0f0f0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      button.delete {
+        background-color: red;
+        color: white;
+        border: none;
+        padding: 5px 10px;
+        cursor: pointer;
+      }
+      input {
+        padding: 5px;
+        width: 300px;
+      }
+    </style>
+
+    <h2>Мій список справ</h2>
+    <input type="text" id="todoInput" placeholder="Нова справа..." />
+    <button id="addBtn">Додати</button>
+    <div id="todoList"></div> -->
+
+    <!-- <style>
+      textarea {
+        width: 100%;
+        height: 150px;
+        padding: 10px;
+        font-size: 16px;
+      }
+      .stats {
+        display: flex;
+        gap: 30px;
+        margin-top: 10px;
+        font-size: 18px;
+      }
+      .stat {
+        padding: 10px 20px;
+        background-color: #f0f0f0;
+        border-radius: 5px;
+      }
+    </style>
+
+    <h2>Аналізатор тексту</h2>
+    <textarea id="textArea" placeholder="Введи текст..."></textarea>
+
+    <div class="stats">
+      <div class="stat">Символів: <span id="charCount">0</span></div>
+      <div class="stat">Слів: <span id="wordCount">0</span></div>
+      <div class="stat">Рядків: <span id="lineCount">0</span></div>
+    </div> -->
+
+    <!-- <style>
+      input {
+        padding: 10px;
+        width: 300px;
+        margin-right: 10px;
+      }
+      button {
+        padding: 10px 20px;
+      }
+      #list {
+        margin-top: 20px;
+      }
+      .list-item {
+        padding: 10px;
+        margin: 5px 0;
+        background-color: #f0f0f0;
+        border-left: 4px solid #4caf50;
+      }
+    </style>
+
+    <input type="text" id="itemInput" placeholder="Додай елемент списку" />
+    <button id="addBtn">Додати</button>
+    <button id="clearBtn">Очистити список</button>
+
+    <div id="list"></div> -->
+
+    <!-- <style>
+      .demo-text {
+        padding: 20px;
+        background-color: #f0f0f0;
+        margin: 20px 0;
+        transition: all 0.3s;
+      }
+      .controls {
+        margin: 20px 0;
+      }
+      input[type="range"] {
+        width: 300px;
+      }
+      .control-group {
+        margin: 15px 0;
+      }
+      label {
+        display: inline-block;
+        width: 150px;
+      }
+    </style>
+
+    <div class="demo-text" id="demoText">
+      Це демонстраційний текст. Змінюй його властивості!
     </div>
+
+    <div class="controls">
+      <div class="control-group">
+        <label>Розмір шрифту:</label>
+        <input type="range" id="fontSize" min="10" max="50" value="16" />
+        <span id="fontSizeValue">16px</span>
+      </div>
+
+      <div class="control-group">
+        <label>Колір тексту:</label>
+        <input type="color" id="textColor" value="#000000" />
+      </div>
+
+      <div class="control-group">
+        <label>Колір фону:</label>
+        <input type="color" id="bgColor" value="#f0f0f0" />
+      </div>
+
+      <div class="control-group">
+        <label>Відступ:</label>
+        <input type="range" id="padding" min="0" max="100" value="20" />
+        <span id="paddingValue">20px</span>
+      </div>
+    </div> -->
 
     <!-- ! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
