--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.css"
+    />
   </head>
   <body>
     <!--* ======================== BLANDED WORK -->
@@ -1315,6 +1320,77 @@
       }
     </style> -->
 
+    <!-- <input id="input2" type="text" placeholder="Введи щось..." /> -->
+
+    <!-- <form id="form4">
+      <input name="username" type="text" placeholder="Ім'я" />
+      <button type="submit">Відправити</button>
+    </form> -->
+
+    <!-- <div
+      id="box5"
+      style="width: 100px; height: 100px; background: #aaa; cursor: pointer"
+    ></div> -->
+
+    <!-- <button id="minus6">-</button>
+    <span id="counter6">0</span>
+    <button id="plus6">+</button>
+    <button id="reset6">reset</button> -->
+
+    <!-- <ul id="list7">
+      <li>Елемент 1</li>
+      <li>Елемент 2</li>
+      <li>Елемент 3</li>
+    </ul> -->
+
+    <!-- <button id="add9">Додати елемент</button>
+    <ul id="list9"></ul> -->
+
+    <!-- <p>Натискай стрілки ↑ ↓</p> -->
+    <!-- 
+    <input id="input11" type="text" placeholder="Без цифр!" />
+    <p id="warning11" style="color: red"></p> -->
+
+    <!-- <ul class="gallery"></ul> -->
+
+    <!-- <form id="registerForm">
+      <label>
+        Ім'я:
+        <input type="text" name="name" id="nameInput" />
+        <span class="error" id="nameError"></span>
+      </label>
+      <br />
+
+      <label>
+        Email:
+        <input type="email" name="email" id="emailInput" />
+        <span class="error" id="emailError"></span>
+      </label>
+      <br />
+
+      <label>
+        Пароль:
+        <input type="password" name="password" id="passwordInput" />
+        <span class="error" id="passwordError"></span>
+      </label>
+      <br />
+
+      <button type="submit">Send</button>
+    </form>
+
+    <div id="formMessage"></div> -->
+
+    <!-- <form id="simpleForm">
+      <input type="text" id="nameInput" placeholder="Ім'я" />
+      <span id="nameError"></span>
+      <br />
+      <input type="text" id="emailInput" placeholder="Email" />
+      <span id="emailError"></span>
+      <br />
+      <button type="submit">Відправити</button>
+    </form>
+    <div id="formMessage"></div> -->
+
     <!-- ! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
     <!-- <script type="module" src="./js/lesson-2.js"></script> -->
@@ -1331,6 +1407,10 @@
     <!--! практика  -->
     <!-- <script type="module" src="./js/practice.js"></script> -->
     <!-- <script type="module" src="./js/practice2.js"></script> -->
+
+    <script src="
+https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
+"></script>
     <script type="module" src="./js/practice3.js"></script>
   </body>
 </html>
