--- a/index.html
+++ b/index.html
@@ -1408,9 +1408,9 @@
     <!-- <script type="module" src="./js/practice.js"></script> -->
     <!-- <script type="module" src="./js/practice2.js"></script> -->
 
-    <script src="
+    <!-- <script src="
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
-"></script>
+"></script> -->
     <script type="module" src="./js/practice3.js"></script>
   </body>
 </html>
