--- a/index.html
+++ b/index.html
@@ -1454,6 +1454,26 @@
     <button class="my-button-cancel" id="js-my-button-cancel">
       cancel timeout
     </button> -->
+    <!-- 
+    <button id="decrement">-1</button>
+    <span id="count">0</span>
+    <button id="increment">+1</button> -->
+
+    <!-- <div
+      id="colorBox"
+      style="width: 200px; height: 200px; background: lightblue; margin: 20px"
+    ></div>
+    <button id="changeColor">Змінити колір</button> -->
+
+    <!-- <input type="text" id="taskInput" placeholder="Нова справа" />
+    <button id="addTask">Додати</button>
+    <ul id="taskList"></ul> -->
+    <!-- 
+    <ul id="items">
+      <li>Елемент 1 <button class="remove">×</button></li>
+      <li>Елемент 2 <button class="remove">×</button></li>
+      <li>Елемент 3 <button class="remove">×</button></li>
+    </ul> -->
 
     <!-- ! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
