--- a/index.html
+++ b/index.html
@@ -1474,6 +1474,107 @@
       <li>Елемент 2 <button class="remove">×</button></li>
       <li>Елемент 3 <button class="remove">×</button></li>
     </ul> -->
+    <!-- 
+    <button id="openModal">Відкрити модалку</button>
+
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">×</span>
+        <h2>Привіт!</h2>
+        <p>Це модальне вікно. Закрий мене.</p>
+      </div>
+
+      <style>
+        .modal {
+          display: none;
+        }
+        .modal.active {
+          display: block;
+        }
+      </style>
+    </div> -->
+
+    <!-- <input type="text" id="search" placeholder="Пошук..." />
+    <ul id="list">
+      <li>Яблуко</li>
+      <li>Банан</li>
+      <li>Вишня</li>
+      <li>Груша</li>
+      <li>Лимон</li>
+      <li>Манго</li>
+    </ul> -->
+
+    <!-- <input type="text" id="userInput" placeholder="Напиши щось..." />
+    <button id="convertBtn">ПЕРЕТВОРИТИ</button>
+    <p id="result"></p> -->
+
+    <!-- <div style="text-align: center; margin-top: 50px">
+      <h1>Колір фону: <span id="colorCode">#ffffff</span></h1>
+      <button id="changeColorBtn">Змінити колір</button>
+    </div> -->
+
+    <!-- <input type="text" id="taskInput" placeholder="Що потрібно зробити?" />
+    <button id="addTaskBtn">Додати</button>
+    <ul id="taskList"></ul> -->
+    <!-- 
+    <div style="text-align: center">
+      <h2 id="counterValue">0</h2>
+      <button id="decreaseBtn">- Зменшити</button>
+      <button id="increaseBtn">+ Збільшити</button>
+    </div> -->
+
+    <!-- <div
+      id="profile-card"
+      style="border: 1px solid #ccc; padding: 10px; width: 200px"
+    >
+      <h3 id="userName">Завантаження...</h3>
+      <p>Вік: <span id="userAge">?</span></p>
+      <p>Професія: <span id="userJob">?</span></p>
+    </div> -->
+
+    <!-- <div
+      id="box"
+      style="
+        width: 300px;
+        height: 300px;
+        border: 2px dashed #333;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      Переміщуй мишу тут
+    </div>
+    <p>Координати: X: <span id="posX">0</span>, Y: <span id="posY">0</span></p> -->
+
+    <!-- <input type="password" id="passwordInput" placeholder="Введіть пароль" />
+    <p>Символів: <span id="charCount">0</span></p> -->
+
+    <!-- <button id="openBtn">Відкрити вікно</button>
+
+    <div
+      id="modal"
+      style="
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px;
+        background: white;
+        border: 1px solid black;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      "
+    >
+      <p>Це модальне вікно!</p>
+      <p>Натисни <b>Esc</b> щоб закрити.</p>
+      <button id="closeBtn">Закрити</button>
+    </div> -->
+
+    <h1 id="greeting">Привіт, Гість!</h1>
+    <input type="text" id="nameInput" placeholder="Твоє ім'я" />
+    <button id="saveBtn">Зберегти</button>
+    <button id="clearBtn">Видалити</button>
 
     <!-- ! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
