--- a/index.html
+++ b/index.html
@@ -1571,10 +1571,10 @@
       <button id="closeBtn">Закрити</button>
     </div> -->
 
-    <h1 id="greeting">Привіт, Гість!</h1>
+    <!-- <h1 id="greeting">Привіт, Гість!</h1>
     <input type="text" id="nameInput" placeholder="Твоє ім'я" />
     <button id="saveBtn">Зберегти</button>
-    <button id="clearBtn">Видалити</button>
+    <button id="clearBtn">Видалити</button> -->
 
     <!-- ! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
