--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
 
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.css"
+    /> -->
+
+    <!--! AXIOS -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <!-- ! lightbox-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.css"
     />
+
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--* ======================== BLANDED WORK -->
@@ -1590,6 +1601,126 @@
     <button id="inc">+</button>
     <button id="reset">Reset</button> -->
 
+    <!-- <div class="wrap__btn-1">
+      <input type="text" id="input__info" placeholder="Enter number" />
+      <button id="show__btn">Show info</button>
+      <button id="clear__btn">Clear</button>
+    </div>
+
+    <div class="content__wrap">
+      <ul id="list"></ul>
+    </div> -->
+
+    <!-- <h1>Погода в твоєму місті</h1>
+    <input
+      type="text"
+      id="cityInput"
+      placeholder="Введіть місто (наприклад: Kyiv)"
+    />
+    <button id="getWeather">Показати погоду</button>
+
+    <div id="weather"></div> -->
+
+    <!-- <div style="text-align: left; margin-top: 50px">
+      <h2>Випадковий жарт</h2>
+      <div id="joke-container">
+        <p id="setup"></p>
+        <p id="punchline" style="font-weight: bold; margin-top: 20px"></p>
+      </div>
+      <button id="new-joke">Новий жарт</button>
+    </div> -->
+    <!-- 
+    <h3>Додай свій жарт</h3>
+    <input type="text" id="my-setup" placeholder="Початок жарту (setup)" />
+    <input type="text" id="my-punchline" placeholder="Кінцівка (punchline)" />
+    <button id="send-joke">Надіслати жарт</button>
+
+    <div id="send-result"></div> -->
+
+    <!-- <button class="btn-no" id="js-btn" type="submit">Click</button>
+    <span class="span-no" id="js-span"></span>
+    <!-- ?Підключення бібліотеки  -->
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/notiflix@3.2.8/dist/notiflix-3.2.8.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/notiflix@3.2.8/dist/notiflix-3.2.8.min.js"></script>  -->
+
+    <!-- 
+    <button class="btn-no" id="js-btn" type="submit">Click</button>
+
+    <ul class="show__container"></ul> -->
+
+    <!-- <div class="gallery">
+      <a
+        class="gallery__link"
+        href="https://images.unsplash.com/photo-1610213728302-9528164e663e?q=80&w=840&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      >
+        <img
+          class="gallery__img"
+          src="https://images.unsplash.com/photo-1610213728302-9528164e663e?q=80&w=840&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Nature landscape"
+        />
+      </a>
+
+      <a
+        class="gallery__link"
+        href="https://plus.unsplash.com/premium_photo-1661892455306-5b28d01164f3?q=80&w=872&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      >
+        <img
+          class="gallery__img"
+          src="https://plus.unsplash.com/premium_photo-1661892455306-5b28d01164f3?q=80&w=872&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Mountain view"
+        />
+      </a>
+
+      <a
+        class="gallery__link"
+        href="https://images.unsplash.com/photo-1614972973290-3b2f6f6cab49?q=80&w=921&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      >
+        <img
+          class="gallery__img"
+          src="https://images.unsplash.com/photo-1614972973290-3b2f6f6cab49?q=80&w=921&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Ocean sunset"
+        />
+      </a>
+
+      <a
+        class="gallery__link"
+        href="https://images.unsplash.com/photo-1652340182725-1edbeff27adb?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      >
+        <img
+          class="gallery__img"
+          src="https://images.unsplash.com/photo-1652340182725-1edbeff27adb?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Forest path"
+        />
+      </a>
+
+      <a
+        class="gallery__link"
+        href="https://images.unsplash.com/photo-1661023794084-23f3d9bd1e86?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      >
+        <img
+          class="gallery__img"
+          src="https://images.unsplash.com/photo-1661023794084-23f3d9bd1e86?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="City lights"
+        />
+      </a>
+
+      <a
+        class="gallery__link"
+        href="https://images.unsplash.com/photo-1520665680252-610662b7377a?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      >
+        <img
+          class="gallery__img"
+          src="https://images.unsplash.com/photo-1520665680252-610662b7377a?q=80&w=880&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="Beach scene"
+        />
+      </a>
+    </div>
+    <!-- ? Підключення бібліотеки  -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script> -->
+
     <!-- ! лекції Blanded -->
     <!-- <script type="module" src="./js/lesson-1.js"></script> -->
     <!-- <script type="module" src="./js/lesson-2.js"></script> -->
@@ -1610,7 +1741,8 @@
     <!-- <script src="
 https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js
 "></script> -->
-    <script type="module" src="./js/practice3.js"></script>
+    <script type="module" src="./js/practice4.js"></script>
+    <!-- <script type="module" src="./js/practice3.js"></script> -->
     <!-- <script type="module" src="./js/products.js"></script> -->
     <!-- <script type="module" src="./js/utils.js"></script> -->
   </body>
