--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- ! lightbox-->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.css"
-    />
+    /> -->
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
