--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   </head>
   <body>
     <!-- ? -->
+    <div id="app">
+      <button id="loadUsers">Завантажити користувачів</button>
+      <div id="usersList"></div>
+    </div>
+    <!-- ? -->
     <!-- <button id="load">Load users</button>
     <ul id="users"></ul> -->
     <!-- ? -->
