--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
   <body>
     <!-- ? -->
     <div id="app">
+      <input
+        type="number"
+        id="postId"
+        placeholder="Введи ID поста (1-100)"
+        min="1"
+        max="100"
+      />
+      <button id="searchPost">Знайти пост</button>
+      <div id="postResult"></div>
+    </div>
+    <!-- ? -->
+    <!-- <div id="app">
       <button id="loadUsers">Завантажити користувачів</button>
       <div id="usersList"></div>
-    </div>
+    </div> -->
     <!-- ? -->
     <!-- <button id="load">Load users</button>
     <ul id="users"></ul> -->
