--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
   <body>
     <!-- ? -->
     <div id="app">
+      <select id="postSelect">
+        <option value="">Обери пост</option>
+        <option value="1">Пост 1</option>
+        <option value="2">Пост 2</option>
+        <option value="3">Пост 3</option>
+      </select>
+      <div id="comments"></div>
+    </div>
+    <!-- ? -->
+    <!-- <div id="app">
+      <button id="loadPhotos">Завантажити фото</button>
+      <div id="loader" style="display: none">Завантаження...</div>
+      <div id="gallery"></div>
+    </div> -->
+    <!-- ? -->
+    <!-- <div id="app">
       <input
         type="number"
         id="postId"
@@ -35,7 +51,7 @@
       />
       <button id="searchPost">Знайти пост</button>
       <div id="postResult"></div>
-    </div>
+    </div> -->
     <!-- ? -->
     <!-- <div id="app">
       <button id="loadUsers">Завантажити користувачів</button>
