--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
   <body>
     <!-- ? -->
     <div id="app">
-      <select id="postSelect">
-        <option value="">Обери пост</option>
-        <option value="1">Пост 1</option>
-        <option value="2">Пост 2</option>
-        <option value="3">Пост 3</option>
-      </select>
-      <div id="comments"></div>
+      <button id="btn">Отримати пост</button>
+      <p id="title"></p>
+      <p id="body"></p>
     </div>
+    <!-- ? -->
+    <!-- <div id="app">
+      <button id="btn">Завантажити дані</button>
+      <div id="result"></div>
+    </div> -->
     <!-- ? -->
     <!-- <div id="app">
       <button id="loadPhotos">Завантажити фото</button>
