--- a/index.html
+++ b/index.html
@@ -26,10 +26,20 @@
   <body>
     <!-- ? -->
     <div id="app">
+      <button id="btn">Завантажити</button>
+      <div id="result"></div>
+    </div>
+    <!-- ? -->
+    <!-- <div id="app">
+      <button id="btn">Спробувати запит</button>
+      <div id="message"></div>
+    </div> -->
+    <!-- ? -->
+    <!-- <div id="app">
       <button id="btn">Отримати пост</button>
       <p id="title"></p>
       <p id="body"></p>
-    </div>
+    </div> -->
     <!-- ? -->
     <!-- <div id="app">
       <button id="btn">Завантажити дані</button>
