--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </div> -->
     <!-- ? -->
     <div class="wrapper">
+      <input type="checkbox" name="" id="checkbox" />
       <button id="js-btn">Click!</button>
       <ul id="list"></ul>
     </div>
