--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       <div id="result"></div>
     </div> -->
     <!-- ? -->
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <input type="checkbox" name="" id="checkbox" />
       <button id="js-btn">Click!</button>
       <ul id="list"></ul>
-    </div>
+    </div> -->
     <!-- ? -->
     <!-- <div id="app">
       <button id="btn">Спробувати запит</button>
