--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
   </head>
   <body>
     <!-- ? -->
+    <form class="form" action="" id="js-form">
+      <input class="input" type="text" id="js-input" />
+      <select class="select" name="" id="js-select">
+        <option value="">Оберіть валюту</option>
+        <option value="hrn">HRN</option>
+        <option value="usd">USD</option>
+      </select>
+      <button class="btn" type="submit" id="js-btn">Конвертувати</button>
+      <div class="result" id="js-result"></div>
+    </form>
+
+    <!-- ? -->
     <!-- <div id="app">
       <button id="btn">Завантажити</button>
       <div id="result"></div>
