--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
   <body>
     <!-- ? -->
     <form class="form" action="" id="js-form">
+      <h1>Конвертер валют</h1>
+      <p>введіть кількість гривень на обмін</p>
       <input class="input" type="text" id="js-input" />
       <select class="select" name="" id="js-select">
         <option value="">Оберіть валюту</option>
-        <option value="hrn">HRN</option>
+        <option value="eur">EUR</option>
         <option value="usd">USD</option>
       </select>
       <button class="btn" type="submit" id="js-btn">Конвертувати</button>
