--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
   </head>
   <body>
     <!-- ? -->
-
-    <div class="task">
+    <div class="wrap">
+      <button class="btn">Show</button>
+      <ol class="result"></ol>
+    </div>
+    <!-- ? -->
+    <!-- <div class="task">
       <button class="theme" id="js-theme">
         <i class="ri-sun-fill icon"></i>
       </button>
@@ -42,8 +46,7 @@
       </div>
 
       <ol class="list" id="js-list"></ol>
-    </div>
-
+    </div> -->
     <!-- ? -->
     <!-- <form class="form" action="" id="js-form">
       <h1>Конвертер валют</h1>
