--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
   </head>
   <body>
     <!-- ? -->
-    <div class="wrap">
+    <input type="password" name="" id="js-pass" />
+    <input type="checkbox" name="" id="js-check" />
+    <button id="js-btn">Show users name</button>
+    <ol id="js-list"></ol>
+    <!-- ? -->
+    <!-- <input type="text" id="js-input" />
+    <button id="btn">SHOW</button>
+    <ol id="items"></ol> -->
+    <!-- ? -->
+    <!-- <div class="wrap">
       <button class="btn">Show</button>
       <ol class="result"></ol>
-    </div>
+    </div> -->
     <!-- ? -->
     <!-- <div class="task">
       <button class="theme" id="js-theme">
