--- a/index.html
+++ b/index.html
@@ -31,10 +31,19 @@
   </head>
   <body>
     <!-- ? -->
-    <input type="password" name="" id="js-pass" />
+    <!-- Завдання №1: "Розумний список справ" (To-Do List)
+    Умова:
+    Інтерфейс: Поле вводу (input) та кнопка "Додати". -->
+
+    <input type="text" id="js-input" />
+    <button id="js-btn">Додати</button>
+    <ul id="js-list"></ul>
+
+    <!-- ? -->
+    <!-- <input type="password" name="" id="js-pass" />
     <input type="checkbox" name="" id="js-check" />
     <button id="js-btn">Show users name</button>
-    <ol id="js-list"></ol>
+    <ol id="js-list"></ol> -->
     <!-- ? -->
     <!-- <input type="text" id="js-input" />
     <button id="btn">SHOW</button>
