--- a/index.html
+++ b/index.html
@@ -30,14 +30,21 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!--? TASK 2 -->
+    <div class="disp">
+      <button class="random-btn" type="submit" id="js-button">
+        Згенерувати героя
+      </button>
+      <ul class="result" id="js-result"></ul>
+    </div>
     <!-- ? -->
     <!-- Завдання №1: "Розумний список справ" (To-Do List)
     Умова:
     Інтерфейс: Поле вводу (input) та кнопка "Додати". -->
 
-    <input type="text" id="js-input" />
+    <!-- <input type="text" id="js-input" />
     <button id="js-btn">Додати</button>
-    <ul id="js-list"></ul>
+    <ul id="js-list"></ul> -->
 
     <!-- ? -->
     <!-- <input type="password" name="" id="js-pass" />
@@ -1839,7 +1846,13 @@
     </div>
 
 
+<!-- ? Notiflix -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/notiflix@3.2.8/dist/notiflix-3.2.8.min.css"
+    />
 
+    <script src="https://cdn.jsdelivr.net/npm/notiflix@3.2.8/dist/notiflix-3.2.8.min.js"></script>
 
     <!-- ? Підключення бібліотеки  -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.3/simple-lightbox.min.js"></script> -->
